# projekt-aplikacja-tlumaczaca-material

./: CMakeLists.txt  Doxyfile  README.md  README.txt  doxygen_log.txt  requirements.txt
doc/html/: _ollama_client_8cpp.html  _ollama_client_8h.html  _ollama_client_8h.js  _ollama_client_8h_source.html  annotated.html  annotated_dup.js  class_main_window-members.html  class_main_window.html  class_ollama_client-members.html  class_ollama_client.html  class_ollama_client.js  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_99d0482cf009f9d97a0877749b817f19.html  dir_99d0482cf009f9d97a0877749b817f19.js  dir_fc4c7f03e1a69a98c370fae55a743828.html  dir_fc4c7f03e1a69a98c370fae55a743828.js  doxygen_crawl.html  files.html  functions.html  functions_func.html  globals.html  globals_func.html  globals_type.html  hierarchy.html  hierarchy.js  index.html  main_8cpp.html  mainwindow_8cpp.html  mainwindow_8h.html  mainwindow_8h_source.html  menudata.js  namespace_ui.html  namespaces.html  navtreedata.js  navtreeindex0.js
doc/html/search/: all_2.js  all_3.js  files_1.js  functions_1.js  searchdata.js
doc/latex/: _ollama_client_8cpp.tex  _ollama_client_8h.tex  _ollama_client_8h_source.tex  annotated.tex  class_main_window.tex  class_ollama_client.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_99d0482cf009f9d97a0877749b817f19.tex  dir_fc4c7f03e1a69a98c370fae55a743828.tex  dirs.tex  files.tex  hierarchy.tex  main_8cpp.tex  mainwindow_8cpp.tex  mainwindow_8h.tex  mainwindow_8h_source.tex  namespaces.tex  refman.tex
include/: OllamaClient.h
src/: OllamaClient.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/gui/: mainwindow.cpp  mainwindow.h  mainwindow.ui
src/network/: OllamaClient.cpp  OllamaClient.h
tests/: test_ollama.cpp
